# openapi-generator-qhttpserver

modules/openapi-generator/src/main/java/org/openapitools/codegen/languages/: CppQtQHttpServerCodegen.java
modules/openapi-generator/src/main/resources/cpp-qt-qhttpserver/: CMakeLists.txt.mustache  HttpFileElement.cpp.mustache  README.md.mustache  apihandler.cpp.mustache  apihandler.h.mustache  apirouter.cpp.mustache  apirouter.h.mustache  helpers-body.mustache  helpers-header.mustache  main.cpp.mustache  model-body.mustache
modules/openapi-generator/src/test/java/org/openapitools/codegen/languages/: CppQtQHttpServerCodegenTest.java
samples/server/petstore/cpp-qt-qhttpserver/.openapi-generator/: FILES
samples/server/petstore/cpp-qt-qhttpserver/server/: Dockerfile  README.MD
samples/server/petstore/cpp-qt-qhttpserver/server/src/: CMakeLists.txt  main.cpp
samples/server/petstore/cpp-qt-qhttpserver/server/src/handlers/: OAIApiRouter.cpp  OAIApiRouter.h  OAIPetApiHandler.cpp  OAIPetApiHandler.h  OAIStoreApiHandler.cpp  OAIStoreApiHandler.h  OAIUserApiHandler.cpp  OAIUserApiHandler.h
samples/server/petstore/cpp-qt-qhttpserver/server/src/models/: OAIHelpers.cpp  OAIHelpers.h  OAIHttpFileElement.cpp
